updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am currently working as a Community Organizer. I am excited to complete this bootcamp and have a new career.  </p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Charlottesville, Va</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love practicing yoga and I am a barre instructor.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Web developer for a company that is trying to solve the climate crisis. </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Richmond, Va</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I like that you get to be creative and are always learning. </p>
     </section>
 
     <footer id="footer">
